Lab2 Practise Exercices

--- a/IES_78323/Lab2/Lab2_1/src/main/webapp/index.html
+++ b/IES_78323/Lab2/Lab2_1/src/main/webapp/index.html
@@ -5,6 +5,10 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+        <h1>Hello Click on Links to continue!</h1>
+        <a href="CalendarServlet">CalendarServlet</a>
+        <a href="RequestServlet?username=diogo&password=diogo">RequestServlet</a>
+ 
+
     </body>
 </html>
